--- a/Client/Components/EditCategoryComponent.razor
+++ b/Client/Components/EditCategoryComponent.razor
@@ -35,51 +35,54 @@
 
 
                         <div class="keyBoardAndBtn">
-                            <div class="outerCancleAndEmoji">
-                                @if (isEmojiExsist)
-                                {
-                                    <button @onclick="ToggleKeyboard" id="emoji-trigger" class="hideDefaultEmojiBtn"><img src="../css/images/add emoji (1).svg" /></button>
-                                }
-                                else if (isCancleBtnClicked)
-                                {
-                                    <button @onclick="ToggleKeyboard" id="emoji-trigger"><img src="../css/images/add emoji (1).svg" /></button>
-                                }
-                                else
-                                {
-                                    <button @onclick="ToggleKeyboard" id="emoji-trigger" class="@hideBtn"><img src="../css/images/add emoji (1).svg" /></button>
-                                }
-                                @if (noEmojiBtn || isEmojiExsist)
-                                {
+                            <div class="emojiBtnAndKeyboard">
+                                <div class="outerCancleAndEmoji">
+                                    @if (isEmojiExsist)
+                                    {
+                                        <button @onclick="ToggleKeyboard" id="emoji-trigger" class="hideDefaultEmojiBtn"><img src="../css/images/add emoji (1).svg" /></button>
+                                    }
+                                    else if (isCancleBtnClicked)
+                                    {
+                                        <button @onclick="ToggleKeyboard" id="emoji-trigger"><img src="../css/images/add emoji (1).svg" /></button>
+                                    }
+                                    else
+                                    {
+                                        <button @onclick="ToggleKeyboard" id="emoji-trigger" class="@hideBtn"><img src="../css/images/add emoji (1).svg" /></button>
+                                    }
+                                    @if (noEmojiBtn || isEmojiExsist)
+                                    {
 
-                                    <div class="outerCancleAndEmoji">
-                                        <button @onclick="deleteSelectedEmoji" class="cancleEmoji">ביטול בחירה</button>
-                                        <button @onclick="ToggleKeyboard" class="selectedEmoji">
-                                            <span class="emoji">@categoryToEdit.icon</span>
-                                            <img src="../css/images/+ icon.svg" class="plusIcon" />
-                                        </button>
+                                        <div class="outerCancleAndEmoji">
+                                            <button @onclick="deleteSelectedEmoji" class="cancleEmoji">ביטול בחירה</button>
+                                            <button @onclick="ToggleKeyboard" class="selectedEmoji">
+                                                <span class="emoji">@categoryToEdit.icon</span>
+                                                <img src="../css/images/+ icon.svg" class="plusIcon" />
+                                            </button>
+                                        </div>
+
+                                    }
+                                </div>
+
+
+                                <div class="emoji-keyboard @visibilityClass">
+                                    <div class="emoji-categories">
+                                        @foreach (var category in emojiCategories.Keys)
+                                        {
+                                            <button class="category-button @(selectedCategory == category ? "active" : "")"
+                                                @onclick="() => SelectCategory(category)">
+                                                @category
+                                            </button>
+                                        }
                                     </div>
-
-                                }
-                            </div>
-
-
-                            <div class="emoji-keyboard @visibilityClass">
-                                <div class="emoji-categories">
-                                    @foreach (var category in emojiCategories.Keys)
-                                    {
-                                        <button class="category-button @(selectedCategory == category ? "active" : "")"
-                                            @onclick="() => SelectCategory(category)">
-                                            @category
-                                        </button>
-                                    }
-                                </div>
-                                <div class="emoji-section">
-                                    @foreach (var emoji in emojiCategories[selectedCategory])
-                                    {
-                                        <span @onclick="() => SelectEmoji(emoji)" class="emoji">@emoji</span>
-                                    }
+                                    <div class="emoji-section">
+                                        @foreach (var emoji in emojiCategories[selectedCategory])
+                                        {
+                                            <span @onclick="() => SelectEmoji(emoji)" class="emoji">@emoji</span>
+                                        }
+                                    </div>
                                 </div>
                             </div>
+                            
 
                         </div>
                         @*<input type="text" id="emoji-input" @bind="categoryToEdit.icon">*@
