--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -20,7 +20,7 @@
         <div id="@hideNav" class="bottom-nav" @ref="navBar">
             <button class="navBtn">מבט לעבר<img src="../css/images/past.svg" /></button>
             <div class="NavLines"> </div>
-            <button class="navBtn" style="font-weight:600">מבט להווה<img src="../css/images/present.svg" /></button>
+            <button class="navBtn" style="font-weight:600; color:#6775F4">מבט להווה<img src="../css/images/present.svg" /></button>
             <div class="NavLines"> </div>
             <button class="navBtn">מבט לעתיד<img src="../css/images/future.svg" /></button>
         </div>
